# SmartspeakerVragen

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  button.c  button.h  chatgpt_api.c  chatgpt_api.h  lcd.c  lcd.h  main.c  recorder.c  recorder.h  recording_to_sdcard_example.c  sdcard.c  sdcard.h  transcriber.c  transcriber.h  wifi.c  wifi.h
